--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "init-database": "node src/database/init/init_database.js"
+    "start": "node server.js"
   },
   "author": "Murat Sercan",
   "license": "ISC",
@@ -14,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
